--- a/templates/Denoising.html
+++ b/templates/Denoising.html
@@ -27,7 +27,7 @@ html, body {
 }
 
 .background-container {
-    background-image: url('images/BG1.png');
+    background-image: url('../static/images/BG1.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -203,7 +203,7 @@ html, body {
 
 
 				<div class="chatgpt-link divL2">
-					<a href="https://elecmark.github.io/"
+					<a href="https://blog.csdn.net/LanLinHui?spm=1011.2415.3001.5343"
 						target="_blank" class="nav-link btn-icon" title="博客Blog"> 
 						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
 						  <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -272,7 +272,7 @@ html, body {
 		<div class="row justify-content-center">
 			<div class="col mt-2 mb-2">
 				<h1 class="text-center">
-					<img src="images/Logo.png" style="height: 1em;">
+					<img src="../static/images/Logo.png" style="height: 1em;">
 				</h1>
 			</div>
 		</div>
@@ -282,7 +282,7 @@ html, body {
 
 				<div class="card h-100 mb-2" data-bs-toggle="modal"
 					data-bs-target="#imageModal">
-					<img id="imageDisplay" src="images/原始图片.png" class="card-img-top">
+					<img id="imageDisplay" src="../static/images/原始图片.png" class="card-img-top">
 					<p class="card-text">原始图片</p>
 				</div>
 
@@ -323,7 +323,7 @@ html, body {
 			<div class="col-lg-5 mb-4">
 				<div class="card h-100 mb-2" data-bs-toggle="modal"
 					data-bs-target="#imageModal">
-					<img src="images/修复图片.png" class="card-img-top">
+					<img src="../static/images/修复图片.png" class="card-img-top">
 					<p class="card-text">修复图片</p>
 				</div>
 
