--- a/templates/Denoising.html
+++ b/templates/Denoising.html
@@ -260,11 +260,16 @@ html, body {
 					<img id="imageDisplay" src="../static/images/原始图片.png" class="card-img-top">
 					<p class="card-text">原始图片</p>
 
-                    					<div class="button-container mb-5 d-flex justify-content-center">
-						<input type="file" id="fileUpload" style="display: none;"
-							accept="image/*" />
-						<button type="button" class="btn btn-primary btn-lg"
-							onclick="document.getElementById('fileUpload').click();">上传/Upload</button>
+
+					<div>
+						<form action="/upload" method="post">
+							<div class="button-container mb-5 d-flex justify-content-center">
+							<input type="file" id="fileUpload" style="display: none;"
+								accept="image/*" />
+							<button type="button" class="btn btn-primary btn-lg"
+								onclick="document.getElementById('fileUpload').click();">上传/Upload</button>
+							</div>
+						</form>
 					</div>
 				</div>
 
