--- a/templates/Denoising.html
+++ b/templates/Denoising.html
@@ -262,12 +262,10 @@ html, body {
 
 
 					<div>
-						<form action="/upload" method="post">
+						<form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
 							<div class="button-container mb-5 d-flex justify-content-center">
-							<input type="file" id="fileUpload" style="display: none;"
-								accept="image/*" />
-							<button type="button" class="btn btn-primary btn-lg"
-								onclick="document.getElementById('fileUpload').click();">上传/Upload</button>
+								<input type="file" id="fileUpload" name="image" style="display: none;" accept="image/*" onchange="handleFileSelect()" />
+								<button type="button" class="btn btn-primary btn-lg" onclick="document.getElementById('fileUpload').click();">上传/Upload</button>
 							</div>
 						</form>
 					</div>
@@ -345,6 +343,32 @@ html, body {
             var modalImage = imageModal.querySelector('#modalImage');
             modalImage.src = src; // 设置模态框中的图片src
         });
+
+        function uploadFile() {
+        var input = document.getElementById('fileUpload');
+        var file = input.files[0];
+
+        if (file) {
+            var formData = new FormData();
+            formData.append('image', file);
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/upload', true);
+
+            xhr.onload = function () {
+                if (xhr.status === 200) {
+                    console.log('Image uploaded successfully!');
+                } else {
+                    console.error('Image upload failed.');
+                }
+            };
+
+            xhr.send(formData);
+
+            // 手动触发表单提交
+            document.getElementById('uploadForm').submit();
+        }
+    }
     </script>
 </body>
 </html>
