--- a/templates/Denoising_old.html
+++ b/templates/Denoising_old.html
@@ -297,7 +297,7 @@
    <div class="row justify-content-center">
     <div class="col-lg-5 mb-6">
         <div class="card h-90 mb-2">
-            <img id="imageDisplay" src="../static/images/原始图片.png" class="card-img-top image-trigger">
+            <img id="imageDisplay" src="../static/images/Original.png" class="card-img-top image-trigger">
             <p class="card-text">原始图片</p>
             <div>
                 <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
@@ -322,7 +322,7 @@
 
     <div class="col-lg-5 mb-6">
         <div class="card h-80 mb-2">
-            <img src="../static/images/修复图片.png" class="card-img-top image-trigger">
+            <img src="../static/images/Result.png" class="card-img-top image-trigger">
             <p class="card-text">修复图片</p>
             <div class="button-container mb-5 d-flex justify-content-center">
                 <button type="button" class="btn btn-outline-secondary btn-lg">下载/Download</button>
