--- a/templates/Denoising.html
+++ b/templates/Denoising.html
@@ -157,25 +157,33 @@
         }
 
 
-        .modal-content {
-            background: none;
-            border: none;
+        .modal-dialog {
+            max-width: 100%; /* 设置模态框最大宽度为100% */
+            height: 100vh; /* 设置模态框高度为视窗高度 */
+            margin: 0; /* 去除默认边距 */
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        .modal-dialog {
-            max-width: fit-content;
-            margin: 1.75rem auto;
+        .modal-content {
+            width: auto; /* 设置宽度自适应 */
+            height: 100vh; /* 设置高度为100% */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: transparent; /* 可选：设置背景透明 */
+            border: none; /* 去除边框 */
         }
 
         #modalImage {
-            max-width: 100%; /* 限制图片的最大宽度为100% */
-            max-height: 100%; /* 限制图片的最大高度 */
-            display: block; /* 使图片居中 */
-            margin: auto; /* 自动边距 */
+            height: 80vh; /* 设置图片高度为视窗高度 */
+            max-width: 100%; /* 保证图片宽度不会超出屏幕宽度 */
+            display: block; /* 确保图片按块级元素显示 */
+            margin: auto; /* 水平居中图片 */
+            object-fit: contain; /* 确保图片完整显示而不被裁剪 */
         }
+
 
         .fixed-size-card {
             width: 400px; /* 定义卡片的宽度 */
@@ -183,12 +191,10 @@
         }
 
         .responsive-img {
-            max-width: 100%; /* 最大宽度为卡片宽度 */
-            max-height: 100%; /* 最大高度为卡片高度 */
-            width: auto; /* 宽度自动 */
-            height: auto; /* 高度自动 */
-            display: block; /* 避免底部有空隙 */
-            margin: 0 auto; /* 水平居中 */
+            max-height: 50%; /* 设置图片的最大高度为卡片高度的一半 */
+            width: auto; /* 设置图片宽度自适应 */
+            display: block; /* 确保图片按块级元素显示 */
+            margin: 0 auto; /* 水平居中图片 */
         }
 
 
